--- a/app/globals.css
+++ b/app/globals.css
@@ -4,8 +4,8 @@
 
 :root {
   --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --normal-font-style: "Montserrat", Helvetica, sans-serif;
+  --text-color-primary: "#5F6A83";
 }
 
 @media (prefers-color-scheme: dark) {
@@ -17,11 +17,38 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
+  font-family: var(--normal-font-style);
+  width: 100%;
+  min-width: 100vw;
+  height: 100%;
+  min-height: 100vh;
+  left: 0px;
+  top: 0px;
+
+  color: var(--text-color-primary);
+
+  background-color: rgb(255, 218, 214);
+  background: -moz-linear-gradient(
+    180deg,
+    rgba(255, 218, 214, 1) 0%,
+    rgba(228, 226, 230, 1) 35%,
+    rgba(220, 226, 236, 1) 100%
+  );
+  background: -webkit-linear-gradient(
+    180deg,
+    rgba(255, 218, 214, 1) 0%,
+    rgba(228, 226, 230, 1) 35%,
+    rgba(220, 226, 236, 1) 100%
+  );
   background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+    180deg,
+    rgba(255, 218, 214, 1) 0%,
+    rgba(228, 226, 230, 1) 35%,
+    rgba(220, 226, 236, 1) 100%
+  );
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffdad6",endColorstr="#dce2ec",GradientType=1);
+}
+
+.logo {
+  color: var(--text-color-primary);
 }
